margin bottom to fix line wrapping in narrow screens

--- a/src/components/footer.module.scss
+++ b/src/components/footer.module.scss
@@ -6,6 +6,10 @@
 
 .social {
   margin-bottom: 8px;
+
+  & svg {
+    margin-bottom: 16px;
+  }
 }
 
 :global(#twitter) {
